Reverted font-display to swap, attempted fix for image flickering

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
   src: url("fonts/frankfurter-medium-regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
-  /* font-display: swap; */
-  font-display: optional;
+  font-display: swap;
+  /* font-display: optional; */
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
